--- a/css/style.css
+++ b/css/style.css
@@ -684,95 +684,152 @@ header .h_number:before {
   left: 3.5%;
   width: 51.2%;
   font-size: 1em;
+  height: 41vh;
 }
-/* line 62, ../sass/components/_application.scss */
+/* line 64, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-subheader {
-  width: 95.5%;
+  width: 96.5%;
   background: #FFFFFF;
   color: #DA251C;
   font-family: "Bebas Neue Book";
   font-size: 2.5em;
   font-weight: 300;
   padding: 1% 0 1% 3.5%;
+  height: 10%;
 }
-/* line 68, ../sass/components/_application.scss */
+/* line 71, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left {
   display: inline;
+  height: 85%;
   width: 38.02817%;
   float: left;
   background: #150303;
 }
-/* line 73, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form-left div {
-  padding-left: 10%;
-  width: 90%;
-}
 /* line 77, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left div {
+  padding: 7% 12% 5% 9.5%;
+  width: 78.5%;
+}
+/* line 80, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left div input {
+  border-right: 1px solid #fff;
+  background: #150303;
+  color: #fff;
+  padding: 0.3em;
+}
+/* line 87, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left div ~ * {
   display: inline-block;
+  vertical-align: middle;
 }
-/* line 81, ../sass/components/_application.scss */
+/* line 91, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_1 {
+  padding-top: 18%;
+}
+/* line 93, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_1 p {
-  width: 13.15789%;
-  float: left;
-}
-/* line 84, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form-left .line_1 input {
-  width: 71.05263%;
-  float: left;
-}
-/* line 89, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form-left .line_2 p {
-  width: 35.83333%;
-  float: left;
-}
-/* line 92, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form-left .line_2 input {
-  width: 47.61905%;
+  padding-top: 1.5%;
+  width: 16.03053%;
   float: left;
 }
 /* line 97, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form-left .line_3 #il_31 {
-  width: 22.40664%;
+.main_wrapper #s_application .application__form #send_form .form-left .line_1 input {
+  width: 79.62963%;
+  float: right;
+  margin-right: 0;
+}
+/* line 102, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_2 p {
+  padding-top: 1.5%;
+  width: 43.25397%;
   float: left;
 }
-/* line 100, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form-left .line_3 #il_32 {
-  width: 22.40664%;
+/* line 106, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_2 input {
+  width: 49.77169%;
+  float: right;
+  margin-right: 0;
+  text-align: right;
+}
+/* line 109, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_2 input::-webkit-datetime-edit {
+  text-align: center;
+}
+/* line 112, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_2 input::-webkit-calendar-picker-indicator {
+  opacity: 1;
+  background: url("../images/date_form_button.png") no-repeat;
+  padding-left: 21%;
+  margin-right: -16%;
+  -webkit-appearance: none;
+}
+/* line 120, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_2 input::-webkit-inner-spin-button {
+  display: none;
+}
+/* line 125, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_3 {
+  padding-top: 5%;
+}
+/* line 127, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_3 #l_31 {
+  padding-top: 1.5%;
+  width: 30.37975%;
   float: left;
 }
-/* line 103, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form-left .line_3 #il_33 {
-  width: 22.40664%;
+/* line 131, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_3 #l_32 {
+  width: 20.53232%;
   float: left;
   text-align: right;
 }
-/* line 108, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form-left .line_3 #il_34 {
-  width: 13.27801%;
+/* line 135, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_3 #l_33 {
+  padding-top: 1.5%;
+  width: 27.63158%;
   float: left;
+  text-align: center;
 }
-/* line 113, ../sass/components/_application.scss */
+/* line 142, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_3 #l_34 {
+  width: 13.15789%;
+  float: right;
+  margin-right: 0;
+}
+/* line 146, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_4 {
+  padding-top: 5%;
+}
+/* line 148, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_4 p {
-  width: 47.61905%;
+  padding-top: 1.5%;
+  width: 53.9924%;
   float: left;
 }
-/* line 116, ../sass/components/_application.scss */
+/* line 152, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_4 input {
-  width: 47.61905%;
-  float: left;
+  width: 37.32194%;
+  float: right;
+  margin-right: 0;
+  text-align: center;
 }
-/* line 121, ../sass/components/_application.scss */
+/* line 158, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-middle {
   display: inline;
   width: 38.02817%;
   float: left;
+  height: 85%;
   background: #1c0404;
 }
-/* line 127, ../sass/components/_application.scss */
+/* line 164, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-middle div {
+  margin: 8% 12% 5% 9.5%;
+}
+/* line 168, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form.right {
   display: inline;
   width: 22.53521%;
   float: left;
+  text-align: center;
   background: #260705;
 }
