--- a/css/style.css
+++ b/css/style.css
@@ -815,21 +815,53 @@ header .h_number:before {
 }
 /* line 158, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-middle {
+  padding-right: 1.4%;
   display: inline;
   width: 38.02817%;
   float: left;
   height: 85%;
   background: #1c0404;
 }
-/* line 164, ../sass/components/_application.scss */
+/* line 165, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-middle div {
-  margin: 8% 12% 5% 9.5%;
+  margin: 24% 9.5% 5% 12%;
 }
-/* line 168, ../sass/components/_application.scss */
-.main_wrapper #s_application .application__form #send_form .form.right {
+/* line 167, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-middle div select {
+  width: 100%;
+  border-right: 1px solid #fff;
+  background: #1c0404;
+  color: #ffffff;
+  margin-top: 6%;
+  padding: 0.3em;
+}
+/* line 175, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-middle div:last-child {
+  margin-top: 10%;
+}
+/* line 180, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-right {
   display: inline;
   width: 22.53521%;
   float: left;
   text-align: center;
   background: #260705;
+  height: 85%;
+}
+/* line 187, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-right a {
+  height: 100%;
+  vertical-align: middle;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+}
+/* line 193, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-right a img {
+  margin-top: 36%;
+}
+/* line 196, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-right a p {
+  position: relative;
+  margin-top: -11%;
 }
