Add content for #s_infom

--- a/sass/base/_main-wrapper.scss
+++ b/sass/base/_main-wrapper.scss
@@ -11,4 +11,5 @@
   @import "components/masters.scss";
   @import "components/studio.scss";
   @import "components/application.scss";
+  @import "components/inform.scss";
 }
