--- a/sass/base/_main-wrapper.scss
+++ b/sass/base/_main-wrapper.scss
@@ -12,4 +12,5 @@
   @import "components/studio.scss";
   @import "components/application.scss";
   @import "components/inform.scss";
+  @import "base/footer";
 }
