--- a/css/style.css
+++ b/css/style.css
@@ -873,4 +873,58 @@ header .h_number:before {
   background: #000000;
   overflow: hidden;
   color: #ffffff;
+  height: 91%;
+}
+/* line 5, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .inform__studio {
+  padding-top: 132px;
+  padding-left: 3.5%;
+}
+/* line 9, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .inform__studio .inform div {
+  display: inline-block;
+  vertical-align: top;
+}
+/* line 14, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .inform__studio .inform .image img {
+  max-height: 147px;
+  max-width: 139px;
+}
+/* line 18, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .inform__studio .inform .description {
+  padding: 0.3em 0 0 1em;
+}
+/* line 20, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .inform__studio .inform .description h1 {
+  color: #DA251C;
+  font-family: "Bebas Neue Book";
+  font-size: 3.5em;
+  font-weight: 300;
+  padding-bottom: 5px;
+}
+/* line 24, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .inform__studio .inform .description p {
+  max-width: 500px;
+}
+/* line 27, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .inform__studio .inform .description .phone {
+  padding-top: 1em;
+}
+/* line 32, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .inform__studio .location {
+  height: 174px;
+  width: 657px;
+  margin-top: 1.308em;
+}
+/* line 38, ../sass/components/_inform.scss */
+.main_wrapper #s_inform .line2 {
+  padding-top: 3.3em;
+}
+/* line 1, ../sass/base/_footer.scss */
+.main_wrapper footer {
+  position: relative;
+  z-index: 10;
+  width: 100%;
+  height: 80px;
+  background-color: #DA251C;
 }
