--- a/sass/base/_footer.scss
+++ b/sass/base/_footer.scss
@@ -1,7 +1,31 @@
 footer{
-  position: absolute;
+  position: fixed;
+  top:592%;
   z-index: 10;
   width: 100%;
   height: 80px;
   background-color: #DA251C;
+  div{
+    display: inline-block;
+    color: #ffffff;
+    padding-top: 20px;
+    @extend %var_text-arial;
+    font-size: 16px;
+  }
+  .footer__info{
+    position: relative;
+    left: 3.5%;
+    vertical-align: middle;
+    p{
+      padding-bottom: 5px;
+    }
+
+  }
+  .footer__developer{
+    float: right;
+    padding-right: 26%;
+    a{
+      color: #ffffff;
+    }
+  }
 }
