--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ header .h_number:before {
   margin: 0 1em;
   letter-spacing: 0.05em;
 }
-/* line 17, ../sass/components/_directions.scss */
+/* line 16, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions__nav .active_dir {
   color: #DA251C;
   width: 161px;
@@ -324,36 +324,38 @@ header .h_number:before {
   background-position: 0px 10px;
   padding: 0.7em 1.1em 1.5em 1.1em;
 }
-/* line 28, ../sass/components/_directions.scss */
+/* line 27, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions__slider {
   width: 300%;
   height: 100%;
   vertical-align: bottom;
+  position: absolute;
 }
 /* line 33, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions__slider div {
   width: 7.63359%;
   float: left;
-  margin-right: 0.76336%;
   position: relative;
-  padding-top: 8%;
+  padding-top: 4.5%;
   height: 50%;
-  background: url(../images/jazz_modern.png) no-repeat;
-  background-position: center;
-  -webkit-background-size: contain;
-  background-size: contain;
 }
-/* line 44, ../sass/components/_directions.scss */
+/* line 42, ../sass/components/_directions.scss */
+.main_wrapper #s_directions .directions__slider div img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+/* line 48, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions__slider .center {
-  left: -0.5%;
-  padding-top: 2%;
+  padding-top: 0;
   width: 15.38462%;
   float: left;
-  margin-right: 1.53846%;
-  height: 75%;
+  margin-left: 0.5%;
+  margin-right: 1.5%;
+  height: 86%;
   background-position: left;
 }
-/* line 54, ../sass/components/_directions.scss */
+/* line 59, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions_text {
   position: absolute;
   z-index: 8;
@@ -361,18 +363,21 @@ header .h_number:before {
   left: 55%;
   max-width: 430px;
 }
-/* line 60, ../sass/components/_directions.scss */
+/* line 65, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions_text h1 {
   color: #DA251C;
   font-family: "Bebas Neue Book";
   font-size: 7.7em;
   font-weight: 300;
+  line-height: 0.95em;
+  padding-bottom: 0.1em;
 }
-/* line 63, ../sass/components/_directions.scss */
+/* line 70, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions_text p {
-  padding-bottom: 0.3em;
+  padding: 0.7em 0 0.7em;
+  line-height: 1.2em;
 }
-/* line 68, ../sass/components/_directions.scss */
+/* line 76, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions_text a {
   color: #4491F9;
   font-size: 1.2em;
