--- a/sass/components/_directions.scss
+++ b/sass/components/_directions.scss
@@ -10,7 +10,6 @@
           div{
             display: inline;
             @include var_TextBebasNew(#2B1B1B, 1.5em," Bold");
-//            font-family: "Bebas Neue Bold";
             margin: 0 1em;
             letter-spacing: 0.05em;
           }
@@ -29,23 +28,29 @@
           width: 25*12%;
           height: 100%;
           vertical-align: bottom;
+          position: absolute;
 
           div{
-            @include span(1 of 12);
+            @include span(1 of 12 no-gutters);
             position: relative;
-            padding-top: 8%;
+            padding-top: 4.5%;
             height: 50%;
-            background: url(../images/jazz_modern.png) no-repeat;
-            background-position: center;
-            -webkit-background-size: contain;
-            background-size: contain;
-
+//            background: url(../images/jazz_modern.png) no-repeat;
+//            background-position: center;
+//            -webkit-background-size: contain;
+//            background-size: contain;
+              img{
+                display: block;
+                max-width: 100%;
+                max-height: 100%;
+              }
           }
           .center{
-            left: -0.5%;
-            padding-top: 2%;
-            @include span(1 of 6);
-            height: 75%;
+            padding-top: 0;
+           @include span(1 of 6 no-gutters);
+            margin-left:0.5%;
+            margin-right:1.5%;
+            height: 86%;
            background-position: left;
           }
         }
@@ -59,10 +64,13 @@
           max-width: 430px;
           h1{
             @include var_TextBebasNew(#DA251C,7.7em," Book");
+            line-height: 0.95em;
+            padding-bottom: 0.1em;
           }
           p{
-            padding-bottom: 0.3em;
+            padding: 0.7em 0 0.7em;
             @extend %var_text-arial;
+            line-height: 1.2em;
 
           }
           a{
