--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -86,19 +86,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 @font-face {
   font-family: "Bebas Neue Bold";
-  src: url('../fonts/bebas/BebasNeue Bold.ttf?1389691024') format('truetype'), url('../fonts/bebas/BebasNeue Bold.otf?1389690976') format('opentype');
+  src: url('../fonts/bebas/BebasNeue Bold.ttf?1389691026') format('truetype'), url('../fonts/bebas/BebasNeue Bold.otf?1389690978') format('opentype');
 }
 @font-face {
   font-family: "Bebas Neue Book";
-  src: url('../fonts/bebas/BebasNeue Book.ttf?1389998576') format('truetype'), url('../fonts/bebas/BebasNeue Book.otf?1389998436') format('opentype');
+  src: url('../fonts/bebas/BebasNeue Book.ttf?1389998578') format('truetype'), url('../fonts/bebas/BebasNeue Book.otf?1389998438') format('opentype');
 }
 @font-face {
   font-family: "Bebas Neue Light";
-  src: url('../fonts/bebas/BebasNeue Light.ttf?1389998707') format('truetype'), url('../fonts/bebas/BebasNeue Light.otf?1389998676') format('opentype');
+  src: url('../fonts/bebas/BebasNeue Light.ttf?1389998708') format('truetype'), url('../fonts/bebas/BebasNeue Light.otf?1389998678') format('opentype');
 }
 @font-face {
   font-family: "Bebas Neue Regular";
-  src: url('../fonts/bebas/BebasNeue Regular.ttf?1389998907') format('truetype'), url('../fonts/bebas/BebasNeue Regular.otf?1389998859') format('opentype');
+  src: url('../fonts/bebas/BebasNeue Regular.ttf?1389998908') format('truetype'), url('../fonts/bebas/BebasNeue Regular.otf?1389998860') format('opentype');
 }
 /* line 4, ../sass/base/_reset.scss */
 body, .main-wrapper, html {
@@ -319,20 +319,35 @@ header .h_number:before {
   color: #DA251C;
   width: 161px;
   height: 64px;
-  background: url(../images/button_menu_directions.png) no-repeat;
+  /*background: url(../images/button_menu_directions.png) no-repeat;
   -webkit-background-size: contain;
   background-size: contain;
   background-position: 0px 10px;
-  padding: 0.7em 1.1em 1.5em 1.1em;
+  padding: 0.7em 1.1em 1.5em 1.1em;*/
+  padding: .5em .9em;
+  background: #fff;
+  border-bottom: 2px solid #E97F79;
+  border-radius: 25px / 30px;
+  position: relative;
 }
-/* line 28, ../sass/components/_directions.scss */
+/* line 31, ../sass/components/_directions.scss */
+.main_wrapper #s_directions .directions__nav .active_dir:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 12.5%;
+  width: 75%;
+  height: 100%;
+  box-shadow: 0 15px 25px -15px rgba(218, 37, 28, 0.48);
+}
+/* line 42, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions__slider {
   width: 300%;
   height: 100%;
   vertical-align: bottom;
   position: absolute;
 }
-/* line 34, ../sass/components/_directions.scss */
+/* line 48, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions__slider div {
   width: 7.63359%;
   float: left;
@@ -340,13 +355,13 @@ header .h_number:before {
   padding-top: 4.5%;
   height: 50%;
 }
-/* line 43, ../sass/components/_directions.scss */
+/* line 57, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions__slider div img {
   display: block;
   max-width: 100%;
   max-height: 100%;
 }
-/* line 49, ../sass/components/_directions.scss */
+/* line 63, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions__slider .center {
   padding-top: 0;
   width: 15.38462%;
@@ -356,7 +371,7 @@ header .h_number:before {
   height: 86%;
   background-position: left;
 }
-/* line 60, ../sass/components/_directions.scss */
+/* line 74, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions_text {
   position: absolute;
   z-index: 8;
@@ -364,7 +379,7 @@ header .h_number:before {
   left: 55%;
   max-width: 430px;
 }
-/* line 66, ../sass/components/_directions.scss */
+/* line 80, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions_text h1 {
   color: #DA251C;
   font-family: "Bebas Neue Book";
@@ -373,12 +388,12 @@ header .h_number:before {
   line-height: 0.95em;
   padding-bottom: 0.1em;
 }
-/* line 71, ../sass/components/_directions.scss */
+/* line 85, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions_text p {
   padding: 0.7em 0 0.7em;
   line-height: 1.2em;
 }
-/* line 77, ../sass/components/_directions.scss */
+/* line 91, ../sass/components/_directions.scss */
 .main_wrapper #s_directions .directions_text a {
   color: #4491F9;
   font-size: 1.2em;
@@ -430,7 +445,7 @@ header .h_number:before {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 12, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/susy-2.2.3/sass/susy/output/support/_clearfix.scss */
+/* line 12, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/susy-2.2.3/sass/susy/output/support/_clearfix.scss */
 .main_wrapper #s_masters .masters__teacher:after {
   content: " ";
   display: block;
@@ -535,7 +550,7 @@ header .h_number:before {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 12, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/susy-2.2.3/sass/susy/output/support/_clearfix.scss */
+/* line 12, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/susy-2.2.3/sass/susy/output/support/_clearfix.scss */
 .main_wrapper #s_studio .studio__information:after {
   content: " ";
   display: block;
