--- a/public/sass/components/_directions.scss
+++ b/public/sass/components/_directions.scss
@@ -18,11 +18,25 @@
             color: #DA251C;
             width: 161px;
             height: 64px;
-            background: url(../images/button_menu_directions.png) no-repeat;
+            /*background: url(../images/button_menu_directions.png) no-repeat;
             -webkit-background-size: contain;
             background-size: contain;
             background-position: 0px 10px;
-            padding: 0.7em 1.1em 1.5em 1.1em;
+            padding: 0.7em 1.1em 1.5em 1.1em;*/
+            padding: .5em .9em;
+            background: #fff;
+            border-bottom: 2px solid #E97F79;
+            border-radius: 25px / 30px;
+            position: relative;
+            &:after {
+              content: "";
+              position: absolute;
+              bottom: 0;
+              left: 12.5%;
+              width: 75%;
+              height: 100%;
+              box-shadow: 0 15px 25px -15px rgba(218, 37, 28, .48);
+            }
           }
       }
         .directions__slider{
