--- a/public/sass/base/_footer.scss
+++ b/public/sass/base/_footer.scss
@@ -1,6 +1,6 @@
 footer{
-  position: fixed;
-  top:592%;
+  position: relative;
+  margin-top: -80px;
   z-index: 10;
   width: 100%;
   height: 80px;
