--- a/public/sass/components/_inner-page.scss
+++ b/public/sass/components/_inner-page.scss
@@ -1,4 +1,5 @@
 .inner_section {
+  margin-bottom: 80px;
   &#in_directions{
     background: #fff;
     color: #000;
@@ -6,5 +7,62 @@
   &#events, &#teachers {
     background: #000;
     color: #fff;
+  }
+  .text-head {
+    position: relative;
+    z-index: 5;
+    left: 3.5%;
+    padding: 122px 0 32px;
+    max-width: 995px;
+    line-height: 1.2em;
+    font-family: "Arial";
+    font-size: 0.803em;
+    font-weight: 400;
+  }
+  .vertical_menu {
+    @include span(3 of 16 no-gutters);
+    margin-left: 3.5%;
+    font: 20px "Bebas Neue Bold";
+    li {
+      margin-bottom: 9.5%;
+      cursor: pointer;
+      &.active {
+        color: #da251c;
+        cursor: text;
+      }
+    }
+  }
+  .content {
+    display: none;
+    &.active {
+      display: block;
+    }
+    @include span(9 of 16 no-gutters);
+    .img_wrap {
+      @include span(5 of 9 no-gutters);
+      text-align: center;
+      img {
+        max-width: 100%;
+      }
+    }
+    .desc_wrap {
+      @include span(4 of 9 no-gutters);
+      h1 {
+        color: #DA251C;
+        font-family: "Bebas Neue Book";
+        font-size: 7.7em;
+        font-weight: 300;
+        line-height: 0.95em;
+        padding-bottom: 0.1em;
+        padding-top: 7.5%;
+      }
+      p {
+        padding: 0.7em 0 0.7em;
+        line-height: 1.2em;
+        font-family: "Arial";
+        font-size: 0.803em;
+        font-weight: 400;
+      }
+    }
   }
 }
