--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -3,6 +3,10 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
+.clear {
+  clear: both;
+}
+
 @import "base/reset";
 @import "base/header";
 @import "base/main-wrapper";
