--- a/public/sass/components/_inner-page.scss
+++ b/public/sass/components/_inner-page.scss
@@ -13,40 +13,55 @@
     z-index: 5;
     left: 3.5%;
     padding: 122px 0 32px;
-    max-width: 995px;
+    max-width: 46.5%;
     line-height: 1.2em;
     font-family: "Arial";
     font-size: 0.803em;
     font-weight: 400;
   }
   .vertical_menu {
-    @include span(3 of 16 no-gutters);
-    margin-left: 3.5%;
+    width: 14.5%;
+    float: left;
+    margin-left: 4.1%;
+    margin-right: 6%;
     font: 20px "Bebas Neue Bold";
     li {
-      margin-bottom: 9.5%;
+      margin-bottom: 12%;
       cursor: pointer;
+      position: relative;
       &.active {
         color: #da251c;
         cursor: text;
+        &:after {
+          content: "";
+          position: absolute;
+          margin-left: 5px;
+          width: 50px;
+          height: 50px;
+          top: -14px;
+          display: inline-block;
+        }
+      }
+      &:hover {
+        color: #da251c;
       }
     }
   }
   .content {
     display: none;
+    width: 49%;
+    float:left;
     &.active {
       display: block;
     }
-    @include span(9 of 16 no-gutters);
     .img_wrap {
-      @include span(5 of 9 no-gutters);
-      text-align: center;
+      @include span(9 of 18 no-gutters);
       img {
         max-width: 100%;
       }
     }
     .desc_wrap {
-      @include span(4 of 9 no-gutters);
+      @include span(8 of 18 no-gutters last);
       h1 {
         color: #DA251C;
         font-family: "Bebas Neue Book";
@@ -63,6 +78,19 @@
         font-size: 0.803em;
         font-weight: 400;
       }
+    }
+    .video {
+      margin: 15.5% 0 11.5% 0;
+    }
+    .video h1, .desc_detail h1 {
+      font: 59px "Bebas Neue Book";
+      color: #DA251C;
+      text-transform: uppercase;
+      margin-bottom: 4%;
+    }
+    .desc_detail {
+      max-width: 92%;
+      margin-bottom: 7.5%;
     }
   }
 }
